properly fix height-overflow bug
Turns out using `position: absolute;` on <body> is super bad practice.
So I just made some changes to the script.

--- a/assets/css/base/_layout.scss
+++ b/assets/css/base/_layout.scss
@@ -28,16 +28,10 @@ body {
     margin: 0;
     font-size: $font-size-base;
     overflow-wrap: break-word;
-
     background-attachment: fixed;
-    position: absolute;
-    min-height: 100vh;
-    width: 100vw;
 
     &.height-overflow {
         background-attachment: scroll;
-        position: relative;
-        margin-bottom: 0;
     }
 }
 
